# EdgeViewer

./: README.md  google-services.json
android-open-gl/web/: index.html  tsconfig.json
android-open-gl/web/src/: index.ts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgeviewer/: MainActivity.kt
app/src/main/java/com/example/edgeviewer/camera/: CameraController.kt
app/src/main/java/com/example/edgeviewer/gl/: EdgeGLSurfaceView.kt  EdgeRenderer.kt
app/src/main/java/com/example/edgeviewer/nativebridge/: NativeBridge.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
